[package]
name = "web-api"
version = "0.1.0"
authors = ["Spxg <itsme@spxg.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.7"
rust-argon2 = "0.6"

[dependencies.reqwest]
version = "0.10"
features = ["json", "blocking"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["json"]

