[package]
name = "web-api"
version = "0.1.0"
authors = ["Spxg <itsme@spxg.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.7"
rust-argon2 = "0.6"
num_cpus = "1.13"
jwt = "0.9"
hmac = "0.8"
sha2 = "0.9"
chrono = "0.4"
time = "0.1.43"
lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2"

[dependencies.reqwest]
version = "0.10"
features = ["json", "blocking"]

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["json"]

